samples/_failures_safe/1761663911_8d1a62_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e2c8923.c: In function ‘main’:
./samples/SAFE/__tmp_5e2c8923.c:166:18: error: expected ‘;’ at end of input
  166 |             break
      |                  ^
      |                  ;
./samples/SAFE/__tmp_5e2c8923.c:166:13: error: expected declaration or statement at end of input
  166 |             break
      |             ^~~~~
./samples/SAFE/__tmp_5e2c8923.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e2c8923.c:166:13: error: expected declaration or statement at end of input
